--- a/software.html
+++ b/software.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/netflix/e119113a-a4be-4791-a853-9af7f2fbedb3'>Netflix - Senior Software Engineer - Data Pipeline Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/e119113a-a4be-4791-a853-9af7f2fbedb3'>Netflix - Senior Software Engineer - Data Pipeline Platform</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://quad.referrals.selectminds.com/jobs/software-engineer-12695'>Software Engineer - Be Quad</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quad.referrals.selectminds.com/jobs/software-engineer-12695'>Software Engineer - Be Quad</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -95,7 +95,7 @@
 <p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/enova/jobs/1622664'>Job Application for Senior Software Engineer (Brazil) at Enova International</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/enova/jobs/1622664'>Job Application for Senior Software Engineer (Brazil) at Enova International</a></h5> 
 <p><span class="badge badge-light">Brazil Brazil S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -119,7 +119,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
 <p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -151,7 +151,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://designlinxhardwaresolutionsllc.applytojob.com/apply/STszvX7bAB/Embedded-Software-Engineer'>Embedded Software Engineer - DesignLinx Hardware Solutions, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://designlinxhardwaresolutionsllc.applytojob.com/apply/STszvX7bAB/Embedded-Software-Engineer'>Embedded Software Engineer - DesignLinx Hardware Solutions, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -193,7 +193,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/9898384BFC'>SmartNews, Inc. - Jobs: Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/9898384BFC'>SmartNews, Inc. - Jobs: Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -225,7 +225,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/3pillarglobal/12651258-4f19-4ed3-b08e-9ff28ff727e0'>3Pillar Global - Senior Software Engineer- Salesforce Development</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/3pillarglobal/12651258-4f19-4ed3-b08e-9ff28ff727e0'>3Pillar Global - Senior Software Engineer- Salesforce Development</a></h5> 
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -289,7 +289,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/052BD9FB63'>Hostway | HOSTING - Jobs: Senior Software Engineer (.NET) - Apply online</a></h5> 
+<h5><a href='https://hostway.workable.com/j/052BD9FB63'>Hostway | HOSTING - Jobs: Senior Software Engineer (.NET) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -301,7 +301,7 @@
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lynk-2.workable.com/j/2033D7EBB8'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<h5><a href='https://lynk-2.workable.com/j/2033D7EBB8'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
 <p><span class="badge badge-light">Hong Kong Island, Hong Kong</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
