--- a/project-manager.html
+++ b/project-manager.html
@@ -138,7 +138,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/4A295ED29C'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/4A295ED29C'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -242,7 +242,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/DE3ED22D85'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/DE3ED22D85'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -258,7 +258,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/F9B37C4D5E'>Right At School - Jobs: Before and After School Care Education Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/F9B37C4D5E'>Right At School - Jobs: Before and After School Care Education Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -326,7 +326,7 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/arc/job/oGuBafwF'>ARC Document Solutions Careers - Print Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/arc/job/oGuBafwF'>ARC Document Solutions Careers - Print Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -338,7 +338,7 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stantec.referrals.selectminds.com/jobs/project-manager-electrical-engineering-6007'>Project Manager, Electrical Engineering - Stantec Careers</a></h5> 
+<h5><a href='https://stantec.referrals.selectminds.com/jobs/project-manager-electrical-engineering-6007'>Project Manager, Electrical Engineering - Stantec Careers</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -368,7 +368,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lewisham.referrals.selectminds.com/jobs/creative-enterprise-zone-cez-relationships-project-manager-771'>Creative Enterprise Zone (CEZ) Relationships & Project Manager - Lewisham Jobs Careers</a></h5> 
+<h5><a href='https://lewisham.referrals.selectminds.com/jobs/creative-enterprise-zone-cez-relationships-project-manager-771'>Creative Enterprise Zone (CEZ) Relationships & Project Manager - Lewisham Jobs Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -418,7 +418,7 @@ data and working with others, sells his/her solution and implements the solution
 <p><span class="badge badge-light">Cork, Ireland California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBd9VfwC&k=Job&j=ofGDafws&__jvst=Employee&__jvsd=sTVFrgwF&__jvsc=Twitter&bid=nMnPUKw7'>DDB Careers - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBd9VfwC&k=Job&j=ofGDafws&__jvst=Employee&__jvsd=sTVFrgwF&__jvsc=Twitter&bid=nMnPUKw7'>DDB Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -439,7 +439,7 @@ data and working with others, sells his/her solution and implements the solution
 <p>3 days ago ... We are seeking a Senior Program Manager to join our Program Management 
 practice. The ideal candidate will have experience managing multiple?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1786611'>Job Application for Project Manager, UX Writing (Contract) at Sony ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1786611'>Job Application for Project Manager, UX Writing (Contract) at Sony ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Project Manager, UX Writing (Contract). San Francisco, CA. Responsibilities: 
 Provides project management expertise for highly complex creative projects,?...</p>
